; ModuleID = '/home/carl/AnghaBench/nginx/src/event/modules/extr_ngx_kqueue_module.c_ngx_kqueue_done.c'
source_filename = "/home/carl/AnghaBench/nginx/src/event/modules/extr_ngx_kqueue_module.c_ngx_kqueue_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ngx_kqueue = common dso_local global i32 0, align 4
@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"kqueue close() failed\00", align 1
@change_list = common dso_local global i32* null, align 8
@event_list = common dso_local global i32* null, align 8
@max_changes = common dso_local global i64 0, align 8
@nchanges = common dso_local global i64 0, align 8
@nevents = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ngx_kqueue_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_kqueue_done(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i32, i32* @ngx_kqueue, align 4
  %4 = call i32 @close(i32 %3)
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @NGX_LOG_ALERT, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @ngx_errno, align 4
  %12 = call i32 @ngx_log_error(i32 %7, i32 %10, i32 %11, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %6, %1
  store i32 -1, i32* @ngx_kqueue, align 4
  %14 = load i32*, i32** @change_list, align 8
  %15 = call i32 @ngx_free(i32* %14)
  %16 = load i32*, i32** @event_list, align 8
  %17 = call i32 @ngx_free(i32* %16)
  store i32* null, i32** @change_list, align 8
  store i32* null, i32** @event_list, align 8
  store i64 0, i64* @max_changes, align 8
  store i64 0, i64* @nchanges, align 8
  store i64 0, i64* @nevents, align 8
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*) #1

declare dso_local i32 @ngx_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
